--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -10,11 +10,11 @@
 <tr><td><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/9/15/n12405683.md#1" target="_blank">重训选哪种？五大重点一篇看懂</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/9/15/n12405683.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/weight-training_138319607-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/10/6/n12455951.md#1" target="_blank">蛋白质吃不够让你肌肉变少 肌少症的4大原因</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/10/6/n12455951.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/shutterstock_1808436256-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>热文推荐</strong></p></h3></td></tr>
+<tr><td><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/5/23/n12131956.md#1" target="_blank">20种低GI食物  控血糖饱腹还促减肥</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/5/23/n12131956.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/low-GI-food-Glycemic-index-1200x800-copy-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/4/25/n12059938.md#1" target="_blank">免疫力太强也不好？当心2大免疫疾病</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/4/25/n12059938.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/immune-system-200425-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/12/24/n11743383.md#1" target="_blank">洗碗精、沐浴乳能加水稀释吗？医师：1种情况千万别</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/12/24/n11743383.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/dish-soap-water_603953678-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/12/2/n11696172.md#1" target="_blank">提早长白发？中医2招让头发回春</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/12/2/n11696172.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/white-hair-black-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/11/6/n11636256.md#1" target="_blank">四物汤是“补血圣品”这时喝最好 但有4大禁忌</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/11/6/n11636256.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/siwutang2-1105-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/11/4/n11632939.md#1" target="_blank">女性黄体素下降 老化不是唯一原因 医师4招改善</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/11/4/n11632939.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/progesterone-woman-1104-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/11/4/n11631302.md#1" target="_blank">“中药第一苦”黄连 不只退火 还能治眼降血糖</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/11/4/n11631302.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/huanglian-Coptis-chinensis-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/10/29/n12511430.md#1" target="_blank">拉筋调节自律神经、改善酸痛！2招动作随时做</a><br></h3>
 <h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/10/29/n12511487.md#1" target="_blank">皮肤干燥发痒？一碗银耳汤解秋燥 润肤抗老</a><br></h3>
