--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/26/n12501740.md#1" title="【重播】美国大选日 17小时接力直播""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/CH_DJYArticle_1200x800_1103-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12523428.md#1" title="中共1400例伪案是如何出炉的（2）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/A4-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ibqnux3284.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526625.md#1">美国大选民调失准 均遭到两党人士批评</a><br>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12526005.md#1">确保选举可信 川普在两州提告 要一州重计票</a><br>
-:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526502.md#1">沈舟：MQ-9B无人机将成为台湾的千里眼</a><br>
-:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526420.md#1">网友发起白宫请愿联署 要求重计亚利桑那州选票</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526705.md#1">长岛州参议院三选区 共和党人领先对手</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526707.md#1">华人评大选：民主党疯狂破底线 坚信川普赢</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526625.md#1">美国大选民调失准 遭到两党人士批评</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12526005.md#1">确保选举可信 川普在两州提告 要一州重计票</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526502.md#1">沈舟：MQ-9B无人机将成为台湾的千里眼</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526420.md#1">网友发起白宫请愿联署 要求重计亚利桑那州选票</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526705.md#1">长岛州参议院三选区 共和党人领先对手</a><br>
+:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526707.md#1">华人评大选：民主党疯狂破底线 坚信川普赢</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12521231.md#1">【翻墙必看】55岁华为副总裁猝死</a><br>
