--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -17,7 +17,6 @@
 <tr><td><h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/19/11/1/n11627980.md#1" target="_blank">秋冬皮肤干 2类人湿疹易发作 这样做可改善</a><br></h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/19/11/1/n11627980.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/eczema-skin_1066262183-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/29/n12511430.md#1" target="_blank">拉筋调节自律神经、改善酸痛！2招动作随时做</a><br></h3>
-<h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/29/n12511487.md#1" target="_blank">皮肤干燥发痒？一碗银耳汤解秋燥 润肤抗老</a><br></h3>
 <h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/30/n12514662.md#1" target="_blank">干咳不是感冒是秋燥？1穴位立即止咳</a><br></h3>
 <h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/31/n12515130.md#1" target="_blank">这些蔬果有苦味别吃 可致中毒！误食3步处理</a><br></h3>
 <h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/2/n12520245.md#1" target="_blank">罹癌后存活50年  台大医师：爬山是一帖良药</a><br></h3>
@@ -26,6 +25,7 @@
 <h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12522596.md#1" target="_blank">【本周直播】干咳、一动就喘？它比肺癌更棘手</a><br></h3>
 <h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12523054.md#1" target="_blank">按腋下2处 消除肩膀痛 顺便矫正肩胛骨</a><br></h3>
 <h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525395.md#1" target="_blank">干涩疲劳是眼睛在呼救！身体4种自救警讯</a><br></h3>
+<h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525454.md#1" target="_blank">黑芝麻补肾、补血又防白发 但3类人要少吃</a><br></h3>
 <h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525463.md#1" target="_blank">“足部反应区”全图解 按摩双脚提升全身自愈力</a><br></h3>
 <tr><td><h3><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ibqnux3284/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/ibqnux3284/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
