--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/26/n12501740.md#1" title="【重播】美国大选日 17小时接力直播""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/CH_DJYArticle_1200x800_1103-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12523428.md#1" title="中共1400例伪案是如何出炉的（2）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/A4-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ibqnux3284.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526809.md#1">纽约长岛两大郡  川普得票领先拜登</a><br>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526812.md#1">纽约市五区中  川普唯一在史坦顿岛领先</a><br>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526839.md#1">她是怎么办到的？美国第一位女战地通讯记者</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526731.md#1">内蒙古幼儿园教师给幼儿扎针 3人被批捕</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526625.md#1">美国大选民调失准 遭到两党人士批评</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12526005.md#1">确保选举可信 川普在两州提告 要一州重计票</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526806.md#1">纽约选民抗议大选舞弊 要求公正结果</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526809.md#1">纽约长岛两大郡  川普得票领先拜登</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526812.md#1">纽约市五区中  川普唯一在史坦顿岛领先</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526839.md#1">她是怎么办到的？美国第一位女战地通讯记者</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526731.md#1">内蒙古幼儿园教师给幼儿扎针 3人被批捕</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526625.md#1">美国大选民调失准 遭到两党人士批评</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
@@ -42,20 +42,20 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,875,578 人
+!共 366,876,233 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】 川普宣布在宾州等三州获胜</a><br>
-<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525930.md#1">【重播】大选生变 摇摆州疑舞弊 法律战开打</a><br>
-<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525350.md#1">被问川普是否胜选 中共外交部表态微妙</a><br>
-<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12523578.md#1">【国会大选更新】参院还剩5席未决</a><br>
-<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
-<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525819.md#1">加州选民彻夜盯票 发现诡异现象疑作弊</a><br>
-<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525453.md#1">【中共百种酷刑】性摧残（上）</a><br>
-<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12521031.md#1">【内幕】高校内部文件泄中共无自信</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526226.md#1">美媒：民主党欲窃取三个摇摆州的选举结果</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526087.md#1">拜登一夜离奇“翻盘” 川普猛批计票舞弊</a><br>
+<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525350.md#1">被问川普是否胜选 中共外交部表态微妙</a><br>
+<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12523578.md#1">【国会大选更新】参院还剩5席未决</a><br>
+<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525819.md#1">加州选民彻夜盯票 发现诡异现象疑作弊</a><br>
+<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525930.md#1">【重播】大选生变 摇摆州疑舞弊 法律战开打</a><br>
+<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12521031.md#1">【内幕】高校内部文件泄中共无自信</a><br>
+<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525453.md#1">【中共百种酷刑】性摧残（上）</a><br>
+<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526454.md#1">【翻墙必看】美国选民紧盯左派选票欺诈</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526344.md#1">川普团队对乔治亚州计票提诉讼 全美第三宗</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526176.md#1">蚂蚁集团暂缓上市 赵薇等明星被指亏大了</a><br>
