--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,10 +13,10 @@
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12524693.md#1" title="川普：停止计票是舞弊 得票率领先足以胜选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449771-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12521384.md#1" title="盘点纽约统战组织(2)华美协进社与文化统战""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/144741-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ibqnux3284.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526965.md#1">转发一个视频 辽宁访民姜家文被行拘10天</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526403.md#1">分析：中共为何把官员私藏禁书列为首罪</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12526005.md#1">确保选举可信 川普在两州提告 要一州重计票</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526965.md#1">转发一个视频 辽宁访民姜家文被行拘10天</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526403.md#1">分析：中共为何把官员私藏禁书列为首罪</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12526005.md#1">确保选举可信 川普在两州提告 要一州重计票</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526806.md#1">纽约选民抗议大选舞弊 要求公正结果</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12524856.md#1">【独家】内部文件解密美国在华“和平队”</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,884,885 人
+!共 366,885,142 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -113,10 +113,10 @@
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/24/n12498279.md#1">揭秘：拜登家族与爆料人关系是如何破裂的</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/9/24/n12426629.md#1">【独家】揭秘打压“诉江潮”的中共帮凶</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/14/n12476368.md#1">【独家】绝密证据曝光中共群体灭绝罪</a><br>
-<br><p align="center"><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/30/n12512695.md#1">夫妻不叫老公老婆 怎表卿卿我我和礼敬？</a><br>
+<br><p align="center"><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/16/n12481774.md#1">清朝痴和尚传奇：行走的市集销量“晴雨表”</a><br>
+<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/30/n12512695.md#1">夫妻不叫老公老婆 怎表卿卿我我和礼敬？</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/26/n12503920.md#1">张三丰说孝行 孝德无穷尽</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/2/n12520267.md#1">李世民为命定天子 四人提前道破天机</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/10/29/n12511720.md#1">【佳人传】闺阁世界的奇伟之才——沈善宝</a><br>
-<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/9/30/n12442866.md#1">《圣经》与《推背图》预言的应验与变换6</a><br>
 <br><p align="center"><a href="https://github.com/ibqnux3284/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ibqnux3284/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ibqnux3284/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ibqnux3284/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/ibqnux3284/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
